2013-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.2

	* vignettes/*: Moved files from inst/doc/

	* .travis.yml: Added for Github / Travis support
	* .gitignore: Added for git support

	* R/zzz.R: Startup message given by .onAttach() rather than .onLoad()

	* src/deoptim.cpp (DEoptim): Added a static_cast<> to make g++-4.8 happy
	* src/devol.cpp (devol): Idem

	* .Rbuildignore: Exclude a few more development files from tarball

2012-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.1

	* tests/compTest.R: With the just-released DEoptim 2.2.0, results are
	no longer identical so we commented-out the stopifnot() comparison to
	not break any automated tests (as requested by the CRAN maintainers)

	* .Rbuildignore: Added a few more files which R CMD check does not
	want to see in the tarball

2011-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/evaluate.h: Also reflect '...' argument from R function we pass
	in, with thanks to Josh Ulrich for the one-line patch

	* R/DEoptim.R: No longer pass environment 'env' down
	* man/DEoptim.Rd: No longer document now unused 'env'

	* src/deoptim.cpp: Minor tweak to RcppArmadillo object creation

2010-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.0

	* inst/doc/RcppDE.Rnw: Finished first version of vignette

2010-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* demo/environment.R: Added new demo to show environment use

2010-11-16  Dirk Eddelbuettel  <edd@debian.org>

	* man/*.Rd: Added Author note for RcppDE.

2010-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/evaluate.h: Converted from evaluate.cpp, now contains abstract
	base class for evaluation as well as two implementations for the old
	standard (using a function and environment from R) as well as new one
	using external pointers passing a function pointer to a function with
	signature double (*fun)(SEXP); also counts nb of calls inside class
	* src/devol.cpp: Adapted to use the new framework
