@@ -1,3 +1,8 @@
+2014-05-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* demo/CompiledBenchmark.R: Rewritten to use Rcpp Attributes
+	* demo/compiledFunctions.cpp: New file, C++ parts of CompiledBench.
+
 2013-12-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.1.2
